# src/main/java/com/repomgr/repomanager/rest/RestRepositoryController.java
@@ -6,6 +6,7 @@ import com.repomgr.repomanager.rest.model.VersionInformationDto;
 import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.security.access.prepost.PreAuthorize;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -30,6 +31,7 @@ public class RestRepositoryController {
      * @param versionInformationDto     Information about the artifact
      * @return                          Created (success) or Bad Request (error)
      */
+    @PreAuthorize("hasAnyAuthority('ROLE_ADMIN', 'ROLE_USER')")
     @PostMapping
     public ResponseEntity<ResponseDto> pushNewVersion(@RequestBody VersionInformationDto versionInformationDto) {
         ResponseDto responseDto = versionService.pushNewVersion(versionInformationDto);
